# arquiteto_parecerista_ans

./: .coverage  .gitignore  BUSINESS_RULES_COMPLIANCE_REPORT.md  GEMINI3_MIGRATION_README.md  GEMINI_3_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  downloaded-logs-20251203-215813.json  example_gemini3_features.py  pdf_content.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_output.txt
agents/genaigke-sdlc-aarq-ans-avaliacao-parceiro/: .coverage  .env.example  .gitignore  API_DOCUMENTATION.md  AVALIACAO_QUALIDADE_FINAL.md  requirements.txt  run_tests_debug.py  sonar-project.properties  streamlit_app.py  values.yaml
agents/gft_ans_architecture_domain/: .gitignore  example_usage_api_mode.py  pytest.ini  requirements.txt
architecture_domain_ans/: __init__.py  agent.py  context_caching.py  prompts.py  reasoning_handler.py
architecture_domain_ans/adapters/: __init__.py  mock_adapter.py
architecture_domain_ans/mock/: __init__.py  mock_data.py
architecture_domain_ans/models/: __init__.py
architecture_domain_ans/tools/: __init__.py  capturar_vencimento.py  carregar_insumos.py  carregar_ressalvas.py  consultar_cmdb.py  registrar_parecer.py
bv_ans/: .env  .env.example  .gitignore  Makefile  README.md  contract.yml  jenkins.properties  requirements.txt  server_local.py
bv_ans/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
bv_ans/src/: test_import.py
bv_ans/testes/: __init__.py  test_routes.py
eval/: ORGANIZACAO_CONCLUIDA.md  README.md  __init__.py
eval/adk_evaluation/: README.md  custom_metrics.py  run_quick_eval.py
(+139 files in other folders)
